--- a/dicoding/style.css
+++ b/dicoding/style.css
@@ -20,11 +20,16 @@ body {
     text-align: center;
  }
 
-<<<<<<< HEAD
- #footer {
-=======
- #header {
->>>>>>> development-1.0
+ #footer{
+   width: 100%;
+   height: 50px;
+   line-height: 50px;
+   background-color: burlywood;
+   text-align: center;
+   color: white;
+}
+
+ #header{
    width: 100%;
    height: 50px;
    line-height: 50px;
